kubernetes/apps/monitoring/kube-prometheus-stack/app/openwrt-router.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openwrt-router
  labels:
    app.kubernetes.io/component: openwrt-router
    app.kubernetes.io/name: openwrt-router
spec:
  ports:
    - name: metrics
      port: 9100
      protocol: TCP
      targetPort: 9100
---
apiVersion: v1
kind: Endpoints
metadata:
  name: openwrt-router
  labels:
    app.kubernetes.io/component: openwrt-router
    app.kubernetes.io/name: openwrt-router
subsets:
  - addresses:
      - ip: 192.168.10.1
    ports:
      - name: metrics
        port: 9100
        protocol: TCP
